test/classes/delete-free/owned/delete-owned.good
delete-owned.chpl:6: error: 'delete' is not allowed on an owned class type
