test/classes/delete-free/owned/delete-owned.chpl
class MyClass {
  var field:int;
}

var y = new owned MyClass(2);
delete y;
